# computer-vision-model-abstraction

./: README.md  pyproject.toml  ruff.toml
cog_cv_abstraction/: __init__.py
cog_cv_abstraction/enum/: __init__.py  status.py
cog_cv_abstraction/image/: __init__.py
cog_cv_abstraction/image/detection/object/: __init__.py  _base.py
cog_cv_abstraction/schema/: detected_object.py  detected_object_set.py  frame.py  video_frame.py
cog_cv_abstraction/schema/dataset/: __init__.py  image_dataset.py
cog_cv_abstraction/video/embedding/: __init__.py  _base.py
cog_cv_abstraction/video/generative/: __init__.py
cog_cv_abstraction/video/generative/diffusion/: __init__.py  _base.py
cog_cv_abstraction/vision_language/: __init__.py  _base.py
cv_api/: __init__.py
cv_api/enum/: status.py
cv_api/schema/: __init__.py  detected_object.py
cv_api/video/: __init__.py
cv_api/video/generative/: __init__.py  _base.py
cv_api/video/generative/diffusion/: _base.py
tests/: test_module_name.py
