[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["cog_cv_abstraction"]  # package names should match these glob patterns (["*"] by default)
exclude = ["images","test.*",]  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "cog_cv_abstraction"
version = "0.0.1"
authors = [
  { name="Minkyu Choi", email="minkyu.choi@coargus.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
]

[project.urls]
"Homepage" = "https://github.com/Coargus/computer-vision-model-abstraction"
"Bug Tracker" = "https://github.com/Coargus/computer-vision-model-abstraction/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]