[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
exclude = ["images","test*",]  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "cog_cv_abstraction"
version = "v0.0.4-dev"
authors = [
  { name="Coargus Engineering", email="admin@coargus.com" },
]
description = "Coargus Computer Vision Abstraction"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
]

[project.urls]
"Homepage" = "https://github.com/Coargus/computer-vision-model-abstraction"
"Bug Tracker" = "https://github.com/Coargus/computer-vision-model-abstraction/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]